# fhir-scripts-collection

./: Readme.md  bundle.json
clean_json/: .gitignore  add.js  clean.js  package-lock.json  package.json  taskTemp.js
fhir_query_to_csv/: .env.example  .gitignore  Cargo.toml  Readme.md  output.csv
fhir_query_to_csv/src/: main.rs
fhir_query_to_csv/test/: sample.json
hapi_query_to_csv/src/: main.rs
js/: .gitignore  package.json  pnpm-lock.yaml
js/src/: main.ts
js/src/core/network/: api.ts
js/src/core/resources/: bundle.ts
js/src/core/tags/: delete.ts
js/src/core/types/: fhir.ts
js/src/scripts/fix-resource-meta/: index.ts  script.ts
js/src/scripts/get_all_patients/: index.ts  script.ts
json_to_csv/: index.js
query-builder/: package.json  pnpm-lock.yaml  tailwind.config.js
query-builder/src/: App.tsx
query-builder/src/app/: globals.css  page.tsx
query-builder/src/app/api/auth/[...nextauth]/: route.ts
query-builder/src/components/: navbar.tsx
query-builder/src/lib/: encryption.ts
tags/: .gitignore  clean.js  delete.js  index.js  package.json  push_bundle.js
tasks/: delete-task-tag.js  fetch_fhir.js  fix-tasks.js  package-lock.json  package.json
upload_resources/: index.js  package-lock.json  package.json
