[package]
name = "hapi_query_to_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "futures-channel"] }
clap = { version = "4.3.21", features = ["derive"] }
tokio = { version = "1.31.0", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.70"
dotenv = "0.15.0"
anyhow = { version = "1.0", default-features = false }
url = "2.4.0"
oauth2 = "4.4.1"
